updated mobile first development

--- a/mobile-first-development/style.css
+++ b/mobile-first-development/style.css
@@ -22,11 +22,28 @@ h3 {
 
 /* Groups & Items */
 
-.group {
+@media all and (min-width: 800px) {
+  section,
+  h1 {
+    padding: 0 10%;
+  }
+
+  .group {
+    flex-direction: row;
+  }
+}
+
+/* .group {
   display: flex;
   flex-direction: row;
   margin-bottom: 100px;
-}
+} */
+
+/* .group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 100px;
+} */
 
 .item {
   flex: 1;
